syntax = "proto3";
package cluster;
import "github.com/AsynkronIT/gam/actor/protos.proto";

message ActorPidRequest {
    string name = 1;
    string kind = 2;
}

message ActorPidResponse {
    actor.PID pid = 1;
}

message TakeOwnership {
    actor.PID pid = 1;
    string name = 2;
}

message GrainRequest {
  string method = 1;
  bytes message_data = 2;
}

message GrainResponse {
  bytes message_data = 1;
}